' Generated by UML Generator
' Encoded: hLPDRzim3BtdL-YOh0wmSp0KtPeKADOLmLhihiYSIzIM0adkeTl--oHRSaJ96T1Ybo0cHVAHx-dZobYkRT-r2_ECyiWrxvXekJ6VhTLuw2tS2YKVy1NOnyKJri04Qj72OZ6iOjSjWhJ0VYqOMzSID-p1nSd6VqhL7JIa5g6q1fLQQjGW12gvaoz8F63s6ZhikmqxADK2bzwwTZyNeUWogLSnMgrYj5R5vYjLhAopyZKQi5k9orK2wSACjgIiSxyeh4F0_G2XY0bc2f16NWzWYyXWfgtGo2rfgyHBtVD3e1btSI0-sMdqFjl9DJEraEHFbCOUQgpLg0oinwyDGsczuIU89nvjMsvXfDpoceX0Z4nleiwyhKMtRAzLtGkhp8RTkUzFyVjo4icOV4agLwoewuIIrOZqtuP8FuOHjH_1P2M9wGHlJaLyS6ZFHwUU0afEWnz6GMWmqr5bOWhROvMERP1JS1GTa_0xCb-VfPYmJvOj-pShIGNUQ6YuZgxbCVpPi6XA5WlUYhxb-b5PtdeejUeFxT1FfupLN7y7qtSWbqdGaVlyq_YZAld11mZBWZn3jKcW4uuWqVBuEhhDW-eBDv002MgBxMI9odEfJ988BcR99NSc-_ywVlOJ9ZfZGrmpo4kcnlKtA7E-h1eh9_XEHqLeQeiDEg97IYplk5HRC8BhXdyxf3C7sN81qKSl56v-yDRTLA-xOT749-4fL7eFNHKxXynT9hEu_EKpXoeI_vZbAqWe5fn3a1qX14rvb53tFFRyjidwe4ejtMSQVuDk6f3Wzlbz3o_gL3ExQWA7DsXGX1qjtFa0uPex2US8HdrjKeknIZnlqHoLH6UQbykO-7rgAO6uTGH6nUP0hAQtGOmlT96uoYhP5XygbjjxD5CyDFA1OgECvyxPHjx0jWOtNjH3sgNWqcBDwvWbFaOSx-5nyM6zdkwuO5BE55bQv0VBUltxilG6sL3d5SZQlOl_0W
' URL: http://www.plantuml.com/plantuml/uml/hLPDRzim3BtdL-YOh0wmSp0KtPeKADOLmLhihiYSIzIM0adkeTl--oHRSaJ96T1Ybo0cHVAHx-dZobYkRT-r2_ECyiWrxvXekJ6VhTLuw2tS2YKVy1NOnyKJri04Qj72OZ6iOjSjWhJ0VYqOMzSID-p1nSd6VqhL7JIa5g6q1fLQQjGW12gvaoz8F63s6ZhikmqxADK2bzwwTZyNeUWogLSnMgrYj5R5vYjLhAopyZKQi5k9orK2wSACjgIiSxyeh4F0_G2XY0bc2f16NWzWYyXWfgtGo2rfgyHBtVD3e1btSI0-sMdqFjl9DJEraEHFbCOUQgpLg0oinwyDGsczuIU89nvjMsvXfDpoceX0Z4nleiwyhKMtRAzLtGkhp8RTkUzFyVjo4icOV4agLwoewuIIrOZqtuP8FuOHjH_1P2M9wGHlJaLyS6ZFHwUU0afEWnz6GMWmqr5bOWhROvMERP1JS1GTa_0xCb-VfPYmJvOj-pShIGNUQ6YuZgxbCVpPi6XA5WlUYhxb-b5PtdeejUeFxT1FfupLN7y7qtSWbqdGaVlyq_YZAld11mZBWZn3jKcW4uuWqVBuEhhDW-eBDv002MgBxMI9odEfJ988BcR99NSc-_ywVlOJ9ZfZGrmpo4kcnlKtA7E-h1eh9_XEHqLeQeiDEg97IYplk5HRC8BhXdyxf3C7sN81qKSl56v-yDRTLA-xOT749-4fL7eFNHKxXynT9hEu_EKpXoeI_vZbAqWe5fn3a1qX14rvb53tFFRyjidwe4ejtMSQVuDk6f3Wzlbz3o_gL3ExQWA7DsXGX1qjtFa0uPex2US8HdrjKeknIZnlqHoLH6UQbykO-7rgAO6uTGH6nUP0hAQtGOmlT96uoYhP5XygbjjxD5CyDFA1OgECvyxPHjx0jWOtNjH3sgNWqcBDwvWbFaOSx-5nyM6zdkwuO5BE55bQv0VBUltxilG6sL3d5SZQlOl_0W
' Generated on: 2026-06-02T13:46:51.618406900

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -dni: String
  -nombre: String
  -correo: String
  -direccionEnvio: String
  -esPremium: boolean
  --
  +Cliente(dni: String, nombre: String, correo: String, direccionEnvio: String, esPremium: boolean)
  +getDni(): String
  +setDni(dni: String): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccionEnvio(): String
  +setDireccionEnvio(direccionEnvio: String): void
  +getEsPremium(): boolean
  +setEsPremium(esPremium: boolean): void
}

class Pedido {
  -idPedido: int
  -fechaPedido: Date
  -estado: String
  -cliente: Cliente
  -listaProductos: List<Producto>
  --
  +Pedido(idPedido: int, fechaPedido: Date, cliente: Cliente)
  +getIdPedido(): int
  +setIdPedido(idPedido: int): void
  +getFechaPedido(): Date
  +setFechaPedido(fechaPedido: Date): void
  +getEstado(): String
  +setEstado(estado: String): void
  +getCliente(): Cliente
  +setCliente(cliente: Cliente): void
  +getListaProductos(): List<Producto>
  +setListaProductos(listaProductos: List<Producto>): void
  +agregarProducto(producto: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
  +pagarPedido(): void
}

abstract class Producto {
  -idProducto: int
  -nombre: String
  -precioBase: double
  --
  +Producto(idProducto: int, nombre: String, precioBase: double)
  +getIdProducto(): int
  +setIdProducto(idProducto: int): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecioBase(): double
  +setPrecioBase(precioBase: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoDigital {
  -tamanoDescargaMb: double
  -enlaceDescarga: String
  -diasValidezEnlace: int
  --
  +ProductoDigital(idProducto: int, nombre: String, precioBase: double, tamanoDescargaMb: double, enlaceDescarga: String, diasValidezEnlace: int)
  +getTamanoDescargaMb(): double
  +setTamanoDescargaMb(tamanoDescargaMb: double): void
  +getEnlaceDescarga(): String
  +setEnlaceDescarga(enlaceDescarga: String): void
  +getDiasValidezEnlace(): int
  +setDiasValidezEnlace(diasValidezEnlace: int): void
  +calcularPrecioFinal(): double
  +generarNuevoEnlace(): void
}

class ProductoFisico {
  -costeEnvio: double
  -pesoKg: double
  -stockDisponible: int
  --
  +ProductoFisico(idProducto: int, nombre: String, precioBase: double, costeEnvio: double, pesoKg: double, stockDisponible: int)
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +getPesoKg(): double
  +setPesoKg(pesoKg: double): void
  +getStockDisponible(): int
  +setStockDisponible(stockDisponible: int): void
  +calcularPrecioFinal(): double
  +reducirStock(cantidad: int): boolean
}

Pedido *-- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml